infra/k8s/external-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-loadbalancer-srv
spec:
  type: LoadBalancer
  selector:
    app: example
  ports:
  - port: 80
    targetPort: 80
