infra/k8s/main-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-srv
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: nginx-ingress-controller
    app.kubernetes.io/part-of: kube-system
  ports:
    - name: flask
      protocol: TCP
      port: 80
      targetPort: 80
