infra/k8s/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: services-nodeport
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: nginx-ingress-controller
    app.kubernetes.io/part-of: kube-system
  ports:
    - name: flask
      protocol: TCP
      port: 80
      targetPort: 80

    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
